# ppc-station

./: .gitignore  cardReader.ino  configure_serial.sh  printer_driver.py
.github/workflows/: compilation.yml
backend/: .gitignore  google.ts  index.ts  package-lock.json  package.json
interface/: .gitignore  Dockerfile  compile.sh  index.html  package-lock.json  package.json  vite.config.js
interface/src/: App.vue  main.js  router.js  store.js  style.css
interface/src-tauri/: Cargo.toml  tauri.conf.json
interface/src-tauri/src/: main.rs
interface/src/components/: Confirmation.vue  End.vue  Greet.vue  PPCChoice.vue  Scan.vue
